// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Chat API Snapshot Tests - Error Scenarios > should match snapshot for missing message and image > missing-message-and-image 1`] = `
{
  "body": {
    "error": "Message or image is required",
  },
  "headers": {
    "content-type": "application/json",
  },
  "status": 400,
  "statusText": "",
}
`;

exports[`Chat API Snapshot Tests - Error Scenarios > should match snapshot for missing projectSlug > missing-project-slug 1`] = `
{
  "body": {
    "error": "Project context is required. Please access chat through a project page.",
  },
  "headers": {
    "content-type": "application/json",
  },
  "status": 400,
  "statusText": "",
}
`;

exports[`Chat API Snapshot Tests - Error Scenarios > should match snapshot for query limit exceeded > query-limit-exceeded 1`] = `
{
  "body": {
    "cached": true,
    "conversationId": null,
    "response": "Cached response for: What is the schedule?",
  },
  "headers": {
    "content-type": "application/json",
  },
  "status": 200,
  "statusText": "",
}
`;

exports[`Chat API Snapshot Tests - Error Scenarios > should match snapshot for rate limit exceeded > rate-limit-exceeded 1`] = `
{
  "body": {
    "error": "Too many requests. Please slow down and try again in a moment.",
    "retryAfter": 45,
  },
  "headers": {
    "content-type": "application/json",
  },
  "status": 429,
  "statusText": "",
}
`;
